<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/dp_20"
    android:gravity="center"
    tools:context=".User.Activity.ForgotPasswordActivity"
    android:background="@drawable/dialog_bg">

    <ImageView
        android:id="@+id/imageLogoLogin"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:src="@drawable/logo_image"/>

    <TextView
        android:id="@+id/textResetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resetPassword"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/brown_dark"
        android:layout_marginBottom="@dimen/dp_20"/>

    <EditText
        android:id="@+id/editForgotPasswordEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="@dimen/dp_12"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="15dp"
        android:background="@drawable/background_edittext"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="@dimen/dp_10"
        android:textColorHint="@color/text_link"
        android:textColor="@color/text_link"
        android:layout_marginBottom="@dimen/dp_20"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonReset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        style="@android:style/Widget.Button"
        android:textColor="@color/text_link"
        android:background="@drawable/brown_bg"
        android:padding="@dimen/dp_15"
        android:layout_marginHorizontal="15dp"
        android:textSize="@dimen/sp_18"/>

</LinearLayout>