<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User.Activity.IntroActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/top_wave">

            <ImageView
                android:id="@+id/imageIntro"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/logo_image" />

            <TextView
                android:id="@+id/textIntro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/intro_text"
                android:textAlignment="center"
                android:textSize="@dimen/sp_25"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/dp_10"/>

            <TextView
                android:id="@+id/textIntroSub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/intro_subtitle"
                android:textAlignment="center"
                android:textSize="@dimen/sp_16"
                android:lineSpacingExtra="@dimen/sp_5"
                android:layout_marginHorizontal="@dimen/dp_10"
                android:textColor="@color/darkGrey"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@android:style/Widget.Button"
                android:background="@drawable/brown_bg"
                android:layout_margin="@dimen/dp_10"
                android:text="@string/btnGetStarted"
                android:textStyle="bold"
                android:textColor="@color/brown_dark"
                android:textSize="@dimen/sp_18" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>