<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="215dp"
    android:layout_margin="8dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageBestSeller"
        android:layout_width="164dp"
        android:layout_height="164dp"
        app:shapeAppearanceOverlay="@style/CornerImageView10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <TextView
        android:id="@+id/textPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rupeeSign"
        android:textStyle="bold"
        android:textColor="@color/text_link"
        android:textSize="@dimen/sp_18"
        android:layout_marginTop="@dimen/dp_4"
        android:layout_marginStart="@dimen/dp_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageBestSeller" />

    <ImageView
        android:id="@+id/heartIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_heart_outline" />

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/title"
        android:singleLine="true"
        android:textColor="@color/text_link"
        android:textSize="@dimen/sp_15"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPrice" />

    <TextView
        android:id="@+id/textStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_4"
        android:text="@string/one"
        android:textColor="@color/brown"
        android:textSize="@dimen/sp_15"
        app:layout_constraintBottom_toBottomOf="@+id/textPrice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textPrice" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_5"
        app:layout_constraintBottom_toBottomOf="@+id/textStart"
        app:layout_constraintEnd_toStartOf="@+id/textStart"
        app:layout_constraintTop_toTopOf="@+id/textStart"
        app:srcCompat="@drawable/star" />

</androidx.constraintlayout.widget.ConstraintLayout>